feat: expose settlement block number
